k8s_use/discovery/ingress_traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: traefik-system
spec:
  # ClusterIP | LoadBalancer |
  #  type: NodePort
  #  clusterIP: None
  selector:
    app: traefik
  ports:
    - name: http
      port: 80
      targetPort: 8080
#      nodePort: 30080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #  ingressClassName: nginx-example
  rules:
    - host: "traefik.baimei-server"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-svc
                port:
                  number: 80
